--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     android:padding="15dp"
     tools:context=".LoginActivity">
 
+    <!-- Start Of Scroll View Child -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,22 +20,27 @@
             android:layout_height="250dp"
             android:layout_marginTop="36dp"
             android:layout_gravity="center"
+            android:src="@drawable/login"
             />
 
+        <!-- Sign In Heading -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:textSize="30sp"
-            android:text="Вход"
+            android:text="Sign In"
             android:textFontWeight="700"/>
 
+        <!-- User Sing In Fields -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txt_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconMode="clear_text"
             app:errorEnabled="true"
+            app:errorTextAppearance="@color/error_color"
+            app:startIconDrawable="@drawable/baseline_person_outline_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_marginTop="20dp">
 
@@ -43,7 +49,7 @@
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Имя пользователя / Email" />
+                android:hint="Username / Email" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -51,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/baseline_lock_open_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_marginTop="20dp">
 
@@ -59,18 +66,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Пароль" />
+                android:hint="password" />
         </com.google.android.material.textfield.TextInputLayout>
+        <!-- End Of User Sing In Fields -->
 
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="#009688"
-            android:enabled="false"
             android:padding="15dp"
-            android:text="Войти" />
+            android:enabled="false"
+            android:text="Login" />
 
 
         <LinearLayout
@@ -81,18 +88,21 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Нет аккаунта?"/>
+                android:text="Don't have an account?"/>
 
             <TextView
                 android:id="@+id/txt_go_to_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Зарегистрироваться"/>
+                android:textColor="@color/tropical_green"
+                android:text="Sign Up"/>
 
         </LinearLayout>
+        <!-- End Of Go To Register Text -->
 
     </LinearLayout>
+    <!-- End Of Start Of Scroll View Child -->
 
 
 </ScrollView>
