--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="#7CB2F2"
     android:padding="15dp"
     tools:context=".LoginActivity">
 
@@ -15,22 +16,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:layout_marginTop="36dp"
-            android:layout_gravity="center"
-            android:src="@drawable/login"
-            />
-
         <!-- Sign In Heading -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:textSize="30sp"
-            android:text="Sign In"
-            android:textFontWeight="700"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="119dp"
+            android:layout_height="81dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="13dp"
+            android:layout_marginTop="50sp"
+            app:srcCompat="@drawable/teacher" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:textAlignment="center"
+                android:textSize="40sp"
+                android:textColor="#FFFFFF"
+                android:text="Вход"
+                android:textFontWeight="700"/>
 
         <!-- User Sing In Fields -->
         <com.google.android.material.textfield.TextInputLayout
@@ -39,17 +44,20 @@
             android:layout_height="wrap_content"
             app:endIconMode="clear_text"
             app:errorEnabled="true"
+
             app:errorTextAppearance="@color/error_color"
             app:startIconDrawable="@drawable/baseline_person_outline_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="100dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txt_email"
-                android:inputType="textEmailAddress"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username / Email" />
+                android:background="@color/white"
+                android:hint="Email"
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -65,20 +73,22 @@
                 android:id="@+id/txt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:inputType="textPassword"
-                android:hint="password" />
+                android:hint="Пароль" />
         </com.google.android.material.textfield.TextInputLayout>
         <!-- End Of User Sing In Fields -->
+
 
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:padding="15dp"
             android:enabled="false"
-            android:text="Login" />
 
+            android:padding="15dp"
+            android:text="Войти" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -86,17 +96,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account?"/>
+                android:text="Еще нет аккаунта?"/>
 
             <TextView
                 android:id="@+id/txt_go_to_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/tropical_green"
-                android:text="Sign Up"/>
+                android:textColor="#044C8A"
+                android:text="Регистрация"/>
 
         </LinearLayout>
         <!-- End Of Go To Register Text -->
