--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:padding="15dp"
     android:gravity="center"
+    android:background="#7CB2F2"
     tools:context=".RegisterActivity">
 
     <ScrollView
@@ -23,26 +24,32 @@
             <!-- Register / Sign Up Heading -->
 
             <ImageView
-                android:layout_width="300dp"
-                android:layout_height="170dp"
-                android:layout_marginTop="25dp"
-                android:src="@drawable/register" />
+                android:id="@+id/imageView"
+                android:layout_width="119dp"
+                android:layout_height="81dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="13dp"
+                android:layout_marginTop="50sp"
+                app:srcCompat="@drawable/teacher" />
 
+            <!-- First Name -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:paddingBottom="5dp"
-                android:text="Sign Up"/>
-            <!-- User Registration Details Fields -->
+                android:layout_marginVertical="10dp"
+                android:text="Регистрация"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textFontWeight="700"
+                android:textSize="40sp" />
 
-            <!-- First Name -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txt_first_name_layout"
                 android:layout_width="match_parent"
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:counterEnabled="true"
+                android:layout_marginTop="50dp"
                 app:counterMaxLength="15"
                 app:counterTextAppearance="@color/error_color"
                 app:counterOverflowTextColor="@color/error_color"
@@ -54,9 +61,11 @@
                     android:id="@+id/txt_first_name"
                     android:layout_width="match_parent"
                     android:maxLength="16"
+                    android:background="@color/white"
+
                     android:maxLines="1"
                     android:layout_height="wrap_content"
-                    android:hint="First Name" />
+                    android:hint="Имя" />
             </com.google.android.material.textfield.TextInputLayout>
             <!-- End Of First Name -->
 
@@ -80,8 +89,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLength="16"
+                    android:background="@color/white"
+
                     android:maxLines="1"
-                    android:hint="Last Name" />
+                    android:hint="Фамилия" />
             </com.google.android.material.textfield.TextInputLayout>
             <!-- End Of Last Name -->
 
@@ -101,7 +112,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:hint="Email Address" />
+                    android:background="@color/white"
+
+                    android:hint="Email" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -113,13 +126,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="30dp"
-                        android:text="MENTOR" />
+                        android:text="Ментор" />
 
                     <RadioButton
                         android:id="@+id/studentRadioButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="STUDENT" />
+                        android:text="Студент" />
                 </RadioGroup>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -140,10 +153,12 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_password"
+                    android:background="@color/white"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:hint="Password" />
+                    android:hint="Пароль" />
             </com.google.android.material.textfield.TextInputLayout>
             <!-- End Of Password -->
 
@@ -152,6 +167,7 @@
                 android:id="@+id/txt_confirm_layout"
                 android:layout_width="match_parent"
                 app:errorEnabled="true"
+
                 app:counterTextAppearance="@color/error_color"
                 app:startIconDrawable="@drawable/baseline_lock_open_24"
                 app:endIconMode="password_toggle"
@@ -159,11 +175,12 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:background="@color/white"
                     android:id="@+id/txt_confirm"
                     android:layout_width="match_parent"
                     android:inputType="textPassword"
                     android:layout_height="wrap_content"
-                    android:hint="Confirm" />
+                    android:hint="Подтверждение пароля" />
             </com.google.android.material.textfield.TextInputLayout>
             <!-- End Of Confirm Password -->
 
@@ -176,7 +193,8 @@
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:enabled="false"
-                android:text="Register" />
+                android:background="@color/white"
+                android:text="Создать аккаунт"/>
             <!-- End Of Register Action Button  -->
 
             <!-- Re-Route To Sign In If User Has An Account -->
@@ -189,14 +207,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Already have an account?"/>
+                    android:textColor="@color/white"
+                    android:text="Уже есть аккаунт?"/>
                 <TextView
                     android:id="@+id/txt_go_to_sign_in"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@color/tropical_green"
-                    android:text="Sign Up"/>
+                    android:textColor="#044C8A"
+                    android:text="Вход"/>
             </LinearLayout>
             <!-- End Of Re-Route To Sign In If User Has An Account -->
 
