--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,12 @@
     <color name="error_color">#E74C3C</color>
     <color name="midnight_purple">#444357</color>
     <color name="tropical_green">#00BFA6</color>
+
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+
+
+    <color name="lavender">#8692f7</color>
+    <color name="grey">#d2d2d2</color>
     <!-- End Of Custom Colors -->
 </resources>
